--- a/saleclsapp-backend/src/main/resources/application.properties
+++ b/saleclsapp-backend/src/main/resources/application.properties
@@ -10,3 +10,16 @@ server.port=8081
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.default-property-inclusion=NON_NULL
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=AuGksk95PCL4C0v1d
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT
+
+security.jwt.client-id=codemediapp
+security.jwt.client-secret=code89codex1
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=coderesourceid
